# GER

./: .gitignore  README.md  pyproject.toml  pyproject_oneline.toml  requirements.txt  setup_uv_4090_cuda128.sh  setup_uv_a800_cuda126.sh  setup_uv_cuda128.sh
multilingual/evaluators/: base.py  postprocess.py  seqeval.py
multilingual/evaluators/ChERRANT/: main.py  parallel_to_m2.py
multilingual/evaluators/ChERRANT/modules/: alignment.py  annotator.py  classifier.py  merger.py
multilingual/evaluators/m2scorer/scripts/: levenshtein.py
multilingual/scripts/: infer_explanation_from_random_icl.sh  infer_explanation_from_semantic_icl.sh  infer_icl_bm25.sh  infer_icl_probing.sh  infer_icl_probing_cot.sh  infer_icl_probing_with_description.sh  infer_icl_random.sh  infer_icl_random_111.sh  infer_icl_refinement_from_random.sh  infer_icl_refinement_from_semantic.sh  infer_icl_semantic.sh  infer_probing.sh  prepare_icl.sh  retrieval_by_bm25.sh  retrieval_by_explanation_from_random_icl.sh  retrieval_by_explanation_from_semantic_icl.sh.sh  retrieval_by_probing.sh  retrieval_by_semantic.sh  show_settings.sh
multilingual/scripts/pipeline/: icl_runtime_defaults.sh
representation-engineering/: requirements.txt
representation-engineering/repe/: rep_readers.py  rep_reading_pipeline.py
results/: errant.score  estgec_modified_m2.score  ger_plus_sem2_estgec_char096.score  ger_plus_sem2_ronacc_char092.score  ger_postprocess_summary_estgec_seed88.jsonl
scripts/: ger.py  ger_new_table1.py  ger_official_eval.py  ger_prepare_bea19_submission.py  ger_prepare_datasets.py  ger_standard_postprocess.py
scripts/ger_pipeline/: README.md  __init__.py  config.py  data_sources.py  dataset_preparation.py  files.py  final_output.py  paths.py  postprocess.py  results.py  runner.py  scoring.py  steps.py  validation.py  workflow.py
scripts/ger_runtime/: __init__.py  helpers.py
scripts/ger_runtime/inference/: evaluate_gec.py  icl.py  yaml_load.py
scripts/ger_runtime/inference/configs/: config.py  data_arguments.py  directory.json  icl_arguments.py
scripts/ger_runtime/inference/data/: check_jsonl.py  constants.py  dataset.py  icl_dataset.py
scripts/ger_runtime/inference/data/dataset_wrapper/: WILocnessBuilder.py  WILocnessWrapper.py  wrapper.py
scripts/ger_runtime/inference/data/instructions/: template.py
scripts/ger_runtime/inference/evaluators/: postprocess.py
scripts/ger_runtime/inference/llm/: pipeline.py
scripts/ger_runtime/inference/scripts/: merge_sharded_predictions.py  monitor_sharded_progress.py
scripts/ger_runtime/inference/scripts/pipeline/: icl_runtime_defaults.sh  infer_initial_predictions.sh  infer_retrieved_icl.sh
scripts/ger_runtime/inference/utils/: base.py  checkpoint.py  log.py  random.py
scripts/ger_runtime/repe_gec/: _common.py  _icl_examples.py  build_gec_representation_cache.py  retrieve_gec_examples_by_representation.py
